# Practica1_eddSS2025_elmermiguel

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Estructuras/: ArregloT.h  ArregloT.tpp  ColaC.cpp  ColaC.h  ListaT.cpp  ListaT.h  PilaPower.cpp  PilaPower.h
Manuales/: Tecnico.md  Usuario.md
MenuJuego/: Juego.cpp  Juego.h  MenuPrincipal.cpp  MenuPrincipal.h
Objetos/: GestorPowerUps.cpp  GestorPowerUps.h  Jugador.cpp  Jugador.h  PowerUp.cpp  PowerUp.h
PTablero/: Celda.cpp  Celda.h  Tablero.cpp  Tablero.h
